# cspm

./: .gitignore  README.md
devel/lib/face_detect/: facedetect
devel/share/face_detect/cmake/: face_detectConfig.cmake
src/: imugetter.py
src/face_detect/: CMakeLists.txt
src/face_detect/scripts/: face_detect.py
src/face_detect/src/: facedetect.cpp  main.cpp  stdafx.h
